--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,7 +37,9 @@
 
   <script src="js/app.js"></script>
   <script src="js/services/ws-helper-service.js"></script>
+  <script src="js/services/card-service.js"></script>
   <script src="js/controllers/monopoly-field-controller.js"></script>
+  <script src="js/controllers/game-controller.js"></script>
 
 </body>
 </html>
