--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="myApp">
   <head>
-  	<title>spring 4/angularjs chat room</title>
+  	<title>Welcome to monopoly</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
