--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this app -->
-    <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="css/grid-view.css"/>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
