--- a/src/main/webapp/userPage.html
+++ b/src/main/webapp/userPage.html
@@ -17,17 +17,18 @@ and open the template in the editor.
         <input name="username" type="text" class="form-control" placeholder="User Name" required autofocus ng-model="userName">
         <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="createPlayer()">Create Player</button>
         
-        <script src="lib/jquery/jquery.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="lib/sockjs/sockjs-0.3.min.js"></script>
-  <script src="lib/stomp/stomp.js"></script>
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/ng-scrollglue/scrollglue.js"></script>
+	  <script src="../lib/jquery/jquery.js"></script>
+	  <script src="../lib/bootstrap/js/bootstrap.min.js"></script>
+	  <script src="../lib/sockjs/sockjs-0.3.min.js"></script>
+	  <script src="../lib/stomp/stomp.js"></script>
+	  <script src="../lib/angular/angular.js"></script>
+	  <script src="../lib/ng-scrollglue/scrollglue.js"></script>
 
-  <script src="js/services/ws-helper-service.js"></script>
-  
-  <script src="js/app.js"></script>
-  <script src="js/user/userApp.js"></script>  
-  <script src="js/user/controllers/user-app-controller.js"></script>
+	  <script src="../js/app.js"></script>
+	  <script src="../js/user/userApp.js"></script>  
+	 
+	  <script src="../js/services/ws-helper-service.js"></script>
+	  
+	  <script src="../js/user/controllers/user-app-controller.js"></script>
     </body>
 </html>
